[workspace]
resolver = "2"

members = [
    "hypervisor",
    "partition",
    "core",

    "examples/hello_part",
    "examples/hello_part_no_macros",

    "examples/fuel_tank/simulation",
    "examples/fuel_tank/controller",

    "examples/ping/client",
    "examples/ping/server",

    "examples/dev_random",

    "examples/ping_queue/client",
    "examples/ping_queue/server",
]

[workspace.dependencies]
a653rs = "0.6"
a653rs-linux = { version = "0.2", path = "partition" }
a653rs-linux-core = { version = "0.2", path = "core" }
log = "0"
nix = { version = "0.29", features = ["socket", "process", "fs", "uio", "signal", "user", "mount", "event", "sched"] }
memmap2 = "0.9"
procfs = "0.16"
polling = "3.4"
itertools = "0.13"
once_cell = "1.19"
bytesize = "1.1"
