[workspace]
resolver = "2"

members = [
    "hypervisor",
    "partition",
    "core",

    "examples/hello_part",
    "examples/hello_part_no_macros",

    "examples/fuel_tank/simulation",
    "examples/fuel_tank/controller",

    "examples/ping/client",
    "examples/ping/server",

    "examples/ping_queue/client",
    "examples/ping_queue/server",

    "examples/dev_random",

    "examples/redirect_stdio"
]

[workspace.package]
edition = "2021"
authors = ["Sven Friedrich <sven.friedrich@dlr.de>"]
license = "MIT OR Apache-2.0"
keywords = [
  "arinc",
  "avionics",
]
categories = [
  "aerospace", 
]
repository = "https://github.com/DLR-FT/a653rs-linux/"

[workspace.dependencies]
a653rs = "0.6"
a653rs-linux = { version = "0.2.2", path = "partition" }
a653rs-linux-core = { version = "0.2.2", path = "core" }
anyhow = "1.0"
log = "0"
nix = { version = "0.29", features = ["socket", "process", "fs", "uio", "signal", "user", "mount", "event", "sched"] }
memmap2 = "0.9"
procfs = "0.16"
polling = "3.4"
itertools = "0.13"
once_cell = "1.19"
bytesize = "1.1"
