[package]
name = "a653rs-linux-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs.workspace = true
a653rs.features = [ "bindings" ]
nix.workspace = true
memmap2.workspace = true
procfs.workspace = true
polling.workspace = true
itertools.workspace = true

anyhow = "1.0"
log = "0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
memfd = "0.6"
bincode = "1.3"
thiserror = "1.0"
bytesize = {workspace = true, features = ["serde"]}
byteorder = "1.4.3"
enum_primitive = "0.1"

[dev-dependencies]
rand = "0.8.5"
