[package]
name = "a653rs-linux-core"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
description = "Core Library for a653rs-linux hypervisor and partition library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs.workspace = true
a653rs.features = [ "bindings" ]
nix.workspace = true
memmap2.workspace = true
procfs.workspace = true
polling.workspace = true
itertools.workspace = true
anyhow.workspace = true
bincode.workspace = true
serde.workspace = true

log = "0"
walkdir = "2.3"
memfd = "0.6"
thiserror = "1.0"
bytesize = {workspace = true, features = ["serde"]}
enum_primitive = "0.1"
ptr_meta = "0.2.0"

[dev-dependencies]
rand = "0.8.5"
