[package]
name = "a653rs-linux-hypervisor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs.workspace = true
a653rs.features = [ "bindings" ]

#apex-hal = { path = "../../a653rs", features = ["p4"] }
a653rs-linux-core = { path = "../core" }


# Required
nix = "0.25"
anyhow = "1.0"
tempfile = "3.3"
clone3 = "0.2"
serde = { version = "1.0", features = ["derive"] }
libc = "0.2"
procfs = "0.14"
itertools = "0.10"
clap = { version = "4", features = [ "derive" ] }
serde_yaml = "0"
humantime = "1"
humantime-serde = "1"
memmap2 = "0.5.5"
log = "0"
pretty_env_logger = "0.5"
quit = "1.1"
memfd = "0.6"
num = "0.4"
once_cell = "1.13"
polling = "2.2"
thiserror = "1.0"
which = "4.4.0"
