[package]
name = "a653rs-linux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs = "0.2"
#apex-hal = { path = "../../a653rs", features = ["p4"] }
a653rs-linux-core = { path = "../core" }
lazy_static = "1.4"
anyhow = "1.0"
nix = "0.25"
polling = "2.2"
log = "0"
once_cell = "1.13"
memmap2 = "0.5.5"
safemem = "0.3"
procfs = "0.14"
tinyvec = "1.6"