[package]
name = "crypto_agility_crypto_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "client" ]
client = []
server = []
example-algorithm = []


[dependencies]
a653rs = { workspace = true, features = ["macros"] }
a653rs-linux = { path = "../../partition" }
anyhow = "1.0"
pqc_sphincsplus = {version = "0.2", features = ["sha2", "f128", "simple"]}
num-traits = "0.2"
num-derive = "0.4"
heapless = "0.7.16"
hpke = { version = "0.10.0", features = ["xyber768d00"] }
log.workspace = true
rand = "0.8.5"

[dev-dependencies]
pretty_env_logger = "0.5"
mockall = "0.11"

