[package]
name = "crypto_agility_crypto_part"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs = { workspace = true, features = ["macros"] }
a653rs-linux = { path = "../../partition" }
heapless = "0.7.16"
hpke = "0.10.0"
log.workspace = true
rand = "0.8.5"

