[package]
name = "fuel_tank_simulation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
a653rs = { workspace = true, features = ["macros"] }
a653rs-linux = { path = "../../partition" }
serde = { version = "1.0", features = ["derive"] }
procfs.workspace = true
nix.workspace = true
memmap2.workspace = true
once_cell.workspace = true
log = "0"
